# InvestmentTool

./: .gitignore  app.py  config.py  pyproject.toml  requirements.txt
.github/workflows/: tests.yml
.streamlit/: config.toml
components/: charts.py  data_tables.py  metrics_cards.py
database/: connection.py  migrations.py  models.py
pages/: 01_Portfolio_Overview.py  02_Stock_Analysis.py  03_Fundamental_Analysis.py  04_Market_Comparison.py  05_Transactions.py
services/: benchmark_service.py  fundamental_analysis.py  market_data.py  portfolio_service.py  technical_analysis.py
tests/: conftest.py  test_benchmark_service.py  test_formatting.py  test_portfolio_holdings.py  test_technical_analysis.py  test_validators.py
utils/: formatting.py  validators.py
